<resources>
    <string name="app_name">effectiveShop</string>
    <string name="splash_screen_app_name">Ecommerce \nConcept</string>

    <!--Select Category-->
    <string name="select_category">Select Category</string>
    <string name="category_1">Phones</string>
    <string name="category_2">Computer</string>
    <string name="category_3">Health</string>
    <string name="category_4">Books</string>
    <string name="category_5">Other</string>

    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="search_hint">Search</string>

    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="buy_now">Buy now!</string>
    <string name="hot_new">New</string>

    <!--Filter options-->
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>


    <!--Bottom navigation bar-->
    <string name="explorer">Explorer</string>
    <string name="my_cart">My Cart</string>
    <string name="fav">Favourites</string>
    <string name="profile">Profile</string>

    <!--Test strings-->
    <string name="mock_size_string">4.5 to 5.5 inches</string>
    <string name="mock_location">Zihuatanejo, Gro</string>
    <string name="hot_title">Iphone 12</string>
    <string name="hot_description">Super. Mega. Rapido.</string>

    <!--Details screen-->
    <string name="details">Product Details</string>
    <string name="select_color_and_capacity">Select style and capacity</string>
    <string name="pager_shop">Shop</string>
    <string name="pager_details">Details</string>
    <string name="pager_features">Features</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>