<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:src="@drawable/mock_best_seller" />

        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:background="@drawable/ellipse"
                style="@style/WhiteSmallText"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="@string/hot_new" />

            <TextView
                style="@style/WhiteTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:textColor="@color/white"
                android:text="@string/hot_title"/>

            <TextView
                style="@style/WhiteSmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/hot_description"/>

            <Button
                android:layout_width="112dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/buy_now"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>